Edited Resource/Img and SY_NetworkStart
Fixed GUI and also added an additional item inside resource

--- a/SECURE-iT-Yourself/MainPage/MainPage.csproj
+++ b/SECURE-iT-Yourself/MainPage/MainPage.csproj
@@ -100,7 +100,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\img\background_forensic.jpg" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\img\BackButton.png" />
     <Resource Include="Resources\img\black_arrow.png" />
