Final Touches on SY_ViewSpecific
Last update for tonight. Will finish the rest in a more decent way once Im awake

--- a/SECURE-iT-Yourself/MainPage/MainPage.csproj
+++ b/SECURE-iT-Yourself/MainPage/MainPage.csproj
@@ -66,6 +66,9 @@
     <Compile Include="SY_ViewCases.xaml.cs">
       <DependentUpon>SY_ViewCases.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SY_ViewSpecificCase.xaml.cs">
+      <DependentUpon>SY_ViewSpecificCase.xaml</DependentUpon>
+    </Compile>
     <Page Include="Beck_NC.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -95,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SY_ViewCases.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SY_ViewSpecificCase.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
