Did the first part of my function. Creating new stuff
Hello hello, papa Syahiran here with another report. Created big ghay. Jokes no, just did some validation etc

--- a/SECURE-iT-Yourself/MainPage/MainPage.csproj
+++ b/SECURE-iT-Yourself/MainPage/MainPage.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Beck_Option.xaml.cs">
       <DependentUpon>Beck_Option.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Case.cs" />
     <Compile Include="SY_AddTagReport.xaml.cs">
       <DependentUpon>SY_AddTagReport.xaml</DependentUpon>
     </Compile>
