--- a/SECURE-iT-Yourself/MainPage/MainPage.csproj
+++ b/SECURE-iT-Yourself/MainPage/MainPage.csproj
@@ -165,6 +165,7 @@
     </Compile>
     <Compile Include="SY_Sort_PCap.cs" />
     <Compile Include="SY_Sort_Windows.cs" />
+    <Compile Include="SY_Tag.cs" />
     <Compile Include="SY_TagDAO.cs" />
     <Compile Include="SY_UpdateLog.xaml.cs">
       <DependentUpon>SY_UpdateLog.xaml</DependentUpon>
@@ -253,6 +254,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Resources\img\technology_cool.jpg" />
     <Resource Include="Resources\img\GearsFile.png" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
