--- a/SECURE-iT-Yourself/MainPage/packages.config
+++ b/SECURE-iT-Yourself/MainPage/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net461" />
+  <package id="FirewallManager" version="1.0.2" targetFramework="net461" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net461" />
   <package id="NessusClient" version="1.0.2.43461" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Sussen" version="1.0.0.1" targetFramework="net461" />
 </packages>
