--- a/SECURE-iT-Yourself/MainPage/App.config
+++ b/SECURE-iT-Yourself/MainPage/App.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="MainPage.Properties.Settings.Isabelle_DatabaseConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Isabelle_Database.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
