--- a/SECURE-iT-Yourself/MainPage/MainPage.csproj
+++ b/SECURE-iT-Yourself/MainPage/MainPage.csproj
@@ -13,6 +13,21 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -59,9 +74,14 @@
       <HintPath>..\packages\Sussen.1.0.0.1\lib\net45\Sussen.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -80,81 +100,52 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Beck_NC.xaml.cs">
-      <DependentUpon>Beck_NC.xaml</DependentUpon>
+    <Compile Include="Isabelle_DatabaseDataSet1.cs">
+      <DependentUpon>Isabelle_DatabaseDataSet1.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Beck_Option.xaml.cs">
-      <DependentUpon>Beck_Option.xaml</DependentUpon>
+    <Compile Include="Isabelle_DatabaseDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Isabelle_DatabaseDataSet1.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Beck_Pass.xaml.cs">
-      <DependentUpon>Beck_Pass.xaml</DependentUpon>
+    <Compile Include="Isabelle_HomePage.xaml.cs">
+      <DependentUpon>Isabelle_HomePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SY_CreatedSuccessCase.xaml.cs">
-      <DependentUpon>SY_CreatedSuccessCase.xaml</DependentUpon>
+    <Compile Include="Isabelle_Login.xaml.cs">
+      <DependentUpon>Isabelle_Login.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SY_NetworkLogUpload.xaml.cs">
-      <DependentUpon>SY_NetworkLogUpload.xaml</DependentUpon>
+    <Compile Include="Isabelle_News.xaml.cs">
+      <DependentUpon>Isabelle_News.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SY_NewCase.xaml.cs">
-      <DependentUpon>SY_NewCase.xaml</DependentUpon>
+    <Compile Include="Isabelle_SignUp.xaml.cs">
+      <DependentUpon>Isabelle_SignUp.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SY_ViewCases.xaml.cs">
-      <DependentUpon>SY_ViewCases.xaml</DependentUpon>
+    <Compile Include="Isabelle_Welcome.xaml.cs">
+      <DependentUpon>Isabelle_Welcome.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SY_ViewSpecificCase.xaml.cs">
-      <DependentUpon>SY_ViewSpecificCase.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="SY_ViewSpecificTeam.xaml.cs">
-      <DependentUpon>SY_ViewSpecificTeam.xaml</DependentUpon>
-    </Compile>
-    <Page Include="Beck_NC.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="Isabelle_HomePage.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Beck_Option.xaml">
+    <Page Include="Isabelle_Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Beck_Pass.xaml">
+    <Page Include="Isabelle_News.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="SY_CreatedSuccessCase.xaml">
+    <Page Include="Isabelle_SignUp.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="SY_NetworkLogUpload.xaml">
+    <Page Include="Isabelle_Welcome.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SY_NetworkStart.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
     </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="SY_NetworkStart.xaml.cs">
-      <DependentUpon>SY_NetworkStart.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Page Include="SY_NewCase.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SY_ViewCases.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SY_ViewSpecificCase.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SY_ViewSpecificTeam.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -174,6 +165,17 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Isabelle_DatabaseDataSet1.xsc">
+      <DependentUpon>Isabelle_DatabaseDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Isabelle_DatabaseDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Isabelle_DatabaseDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Isabelle_DatabaseDataSet1.xss">
+      <DependentUpon>Isabelle_DatabaseDataSet1.xsd</DependentUpon>
+    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -189,6 +191,18 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\agent-icon.png" />
+    <Resource Include="Images\background-security.jpg" />
+    <Resource Include="Images\encryption-icon.png" />
+    <Resource Include="Images\exclamation_mark.png" />
+    <Resource Include="Images\home-icon-md.png" />
+    <Resource Include="Images\home-icon.png" />
+    <Resource Include="Images\ohno - Copy.png" />
+    <Resource Include="Images\ohno.png" />
+    <Resource Include="Images\picture.jpg" />
+    <Resource Include="Images\pineapple.jpg" />
+    <Resource Include="Images\security.jpg" />
+    <Resource Include="Images\warning.png" />
     <Resource Include="Resources\img\background_forensic.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -202,8 +216,36 @@
     <Resource Include="Resources\img\success.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Beck_Images\Background.jpg" />
     <Resource Include="Resources\Beck_Images\Switch.png" />
+    <Resource Include="Resources\Beck_Images\Background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\configuration.png" />
+    <Resource Include="Images\dashboard.png" />
+    <Resource Include="Images\data.png" />
+    <Resource Include="Images\logout-icon.png" />
+    <Resource Include="Images\network.png" />
+    <Resource Include="Images\newspaper.png" />
+    <Resource Include="Images\updates-icon.png" />
+    <Content Include="LocalDB.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="LocalDB_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>LocalDB.mdf</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Beck_Images\green-smiley-face-md.png" />
