--- a/SECURE-iT-Yourself/MainPage/MainPage.csproj
+++ b/SECURE-iT-Yourself/MainPage/MainPage.csproj
@@ -145,6 +145,7 @@
     </Compile>
     <Compile Include="Logs.cs" />
     <Compile Include="LogsDAO.cs" />
+    <Compile Include="SY_ScanAnormalies.cs" />
     <Compile Include="SY_AddTagReport.xaml.cs">
       <DependentUpon>SY_AddTagReport.xaml</DependentUpon>
     </Compile>
@@ -324,7 +325,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\Log_Files\" />
-    <Folder Include="SY_ML\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
